--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -36,7 +36,7 @@
         <span>Cadastro</span>
 
         <ion-item class="ion-margin-top" lines="none">
-          <ion-input type="text" placeholder="Nome"></ion-input>
+          <ion-input type="text" placeholder="Nome" [(ngModel)]="userRegister.nome"></ion-input>
         </ion-item>
 
         <ion-item class="ion-margin-top" lines="none">
@@ -58,7 +58,7 @@
     <div class="waves" [ngStyle]="{'background-position-x': wavesPosition + 'px'}"></div>
 
     <div class="container bottom ion-text-center" [hidden]="keyboard.isVisible">
-      <span>O aplicativo que foi feito para o gerenciamento dos produtos da sua loja de surf!</span>
+      <span>Não pedale sozinho</span>
     </div>
   </div>
 </ion-content>
