pequenas modificações no layout

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -55,7 +55,8 @@
   </ion-slides>
 
   <div class="ocean">
-    <div class="waves" [ngStyle]="{'background-position-x': wavesPosition + 'px'}"></div>
+    <!--
+    <div class="waves" [ngStyle]="{'background-position-x': wavesPosition + 'px'}"></div>-->
 
     <div class="container bottom ion-text-center" [hidden]="keyboard.isVisible">
       <span>Não pedale sozinho</span>
