atualiações do fim de semana

--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -1,3 +1,19 @@
 ion-avatar {
     --border-radius: 0;
 }
+ion-tab-bar{
+    --color: #FF9800;
+}
+
+ion-fab-button {
+    --background: #FF9800;
+}
+
+ion-toolbar{
+    --background: #FF9800;
+    --color: #fff;
+}
+
+.icones {
+    color: #fff;
+}
