--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -59,7 +59,7 @@
     <div class="waves" [ngStyle]="{'background-position-x': wavesPosition + 'px'}"></div>-->
 
     <div class="container bottom ion-text-center" [hidden]="keyboard.isVisible">
-      <span>Não pedale sozinho</span>
+      <span class="textospan">Não pedale sozinho</span>
     </div>
   </div>
 </ion-content>
