--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Surf Shop</ion-title>
+    <ion-title>Feed</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -26,7 +26,7 @@
 
   <ion-list>
     <ion-item-sliding *ngFor="let product of products">
-      <ion-item button [routerLink]="['/details', product.id]">
+      <ion-item>
         <ion-avatar slot="start">
           <img [src]="product.picture">
         </ion-avatar>
@@ -34,10 +34,10 @@
         <ion-label>
           {{ product.name }}
           <p>{{ product.description }}</p>
-          <p>{{ product.createdAt | date: 'short' }}</p>
+          <p>{{ product.dtEvent | date: 'dd/MM/yy h:mm'  }}</p>
         </ion-label>
 
-        <ion-note color="primary" slot="end" *ngIf="product.price">{{ product.price | currency: 'BRL' }}</ion-note>
+        <ion-note color="primary" slot="end">Nível: {{ product.nivel }}</ion-note>
       </ion-item>
 
       <ion-item-options side="end">
@@ -48,23 +48,44 @@
       </ion-item-options>
     </ion-item-sliding>
   </ion-list>
+
+
+  <!-- fab placed to the (vertical) center and end -->
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button routerLink="/details">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+
+
 </ion-content>
 
 <ion-footer>
   <ion-toolbar>
     <ion-grid>
       <ion-row>
-        <ion-col size="6">
-          <ion-button (click)="logout()" color="danger" expand="block">
-            Sair
-          </ion-button>
+        <ion-col size="4">
+          <ion-tab-button (click)="logout()">
+            <ion-icon name="exit"></ion-icon>
+            <ion-label>Sair</ion-label>
+          </ion-tab-button>
+
         </ion-col>
 
-        <ion-col size="6">
-          <ion-button routerLink="/details" expand="block">
-            Add produto
-          </ion-button>
+        <ion-col size="4">
+          <ion-tab-button routerLink="/myposts">
+            <ion-icon name="bicycle"></ion-icon>
+            <ion-label>Meus Eventos</ion-label>
+          </ion-tab-button>
         </ion-col>
+
+        <ion-col size="4">
+          <ion-tab-button routerLink="/perfil">
+            <ion-icon name="person"></ion-icon>
+            <ion-label>Meu Perfil</ion-label>
+          </ion-tab-button>
+        </ion-col>
+
       </ion-row>
     </ion-grid>
   </ion-toolbar>
