--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -24,6 +24,7 @@
 
 ion-slides {
     height: 100%;
+    top: 40px;
 
     .slide-inner {
         width: 75%;
@@ -47,8 +48,9 @@ ion-slides {
     left: 0;
     right: 0;
     bottom: 0;
-    height: 45%;
-    background-color: var(--ion-color-primary);
+    height: 100%;
+    background-color: #FF9800;
+   // background-color: var(--ion-color-primary);
 
     .waves {
         position: absolute;
@@ -60,4 +62,19 @@ ion-slides {
         background-size: contain;
         transition: all 0.5s;
     }
+
+    .textospan {
+         position: absolute;
+         left: 0;
+         right: 0;
+         top: 80px;
+    }
+
+   
+}
+
+ion-segment{
+
+        position: absolute;
+             top: 150px;
 }
