--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -23,21 +23,67 @@
       </ion-label>
     </ion-item>
   </ion-list>
+  
+  <ion-card *ngFor="let product of products">
+    <ion-item >
+      <ion-avatar slot="start">
+         <!-- <img [src]="product.picture"> -->
+         <img src="https://cdn.pixabay.com/photo/2016/08/08/09/17/avatar-1577909_960_720.png">
+        </ion-avatar>
+      <ion-label>{{ product.nameUser }}</ion-label>
+      <ion-button fill="outline" slot="end">View</ion-button>
+      
+    </ion-item>
+    
+    <ion-card-content>
+      <ion-label> {{ product.name }}</ion-label>
+      <ion-card>
+          
+        <ion-item>
+          <ion-icon name="calendar" slot="start"></ion-icon>
+          <ion-label>{{ product.dtEvent | date: 'dd/MM/yy h:mm'  }}</ion-label>
+        </ion-item>
+      
+        <ion-item >
+          <ion-icon name="wine" slot="start"></ion-icon>
+          <ion-label>Card Link Item 2</ion-label>
+        </ion-item>
+      
+        <ion-item class="activated">
+          <ion-icon name="warning" slot="start"></ion-icon>
+          <ion-label>Card Button Item 1 .activated</ion-label>
+        </ion-item>
+      
+        <ion-item>
+          <ion-icon name="walk" slot="start"></ion-icon>
+          <ion-label>Card Button Item 2</ion-label>
+        </ion-item>
+      </ion-card>
+    
+    </ion-card-content>
+  </ion-card>
+  
+  
 
+
+<!--
   <ion-list>
     <ion-item-sliding *ngFor="let product of products">
       <ion-item>
         <ion-avatar slot="start">
           <img [src]="product.picture">
+         <img src="https://cdn.pixabay.com/photo/2016/08/08/09/17/avatar-1577909_960_720.png">
         </ion-avatar>
 
         <ion-label>
-          {{ product.name }}
-          <p>{{ product.description }}</p>
-          <p>{{ product.dtEvent | date: 'dd/MM/yy h:mm'  }}</p>
+          {{ product.nameUser }}
+          <p>{{ product.name }}</p>
+          <p> Data do Evento: {{ product.dtEvent | date: 'dd/MM/yy h:mm'  }}</p>
         </ion-label>
 
         <ion-note color="primary" slot="end">Nível: {{ product.nivel }}</ion-note>
+        <p><ion-note color="primary" slot="end">Modalidade: {{ product.modalidade }}</ion-note></p>
+        
       </ion-item>
 
       <ion-item-options side="end">
@@ -45,9 +91,9 @@
           <ion-icon slot="top" name="trash"></ion-icon>
           Excluir
         </ion-item-option>
-      </ion-item-options>
+      </ion-item-options> 
     </ion-item-sliding>
-  </ion-list>
+  </ion-list>-->
 
 
   <!-- fab placed to the (vertical) center and end -->
