--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -29,7 +29,7 @@ ion-slides {
     .slide-inner {
         width: 75%;
         color: #fff;
-        background-color: #0072bc;
+        background-color: #2f32a0;
         border-radius: 10px;
 
         ion-item {
@@ -49,7 +49,7 @@ ion-slides {
     right: 0;
     bottom: 0;
     height: 100%;
-    background-color: #FF9800;
+    background-color: #ffc400;
    // background-color: var(--ion-color-primary);
 
     .waves {
