--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,6 +1,8 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Feed</ion-title>
+    <ion-title>
+      HOME
+      </ion-title>
     <ion-buttons slot="end">
       <ion-button size="small" shape="round" color="medium" (click)="notifications()">
         <ion-icon name="notifications"></ion-icon>
@@ -8,31 +10,34 @@
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
-  <ion-grid>
-    <ion-row>
-      <ion-col size="8">
-          <ion-item *ngFor="let usuario of usuarios" class="perfil" margin-bottom>
-            <ion-avatar slot="start" class="user-avatar">
-              <img src="assets/img/avatar.jpeg">
-            </ion-avatar>
-            <ion-label>
-              <ion-text class="nameUser">
-                <h1><strong>{{usuario.nome}}</strong></h1>
-              </ion-text>
-              <ion-text>
-                <h3>
-                  Pato Branco - PR
-                </h3>
-              </ion-text>
-            </ion-label>
-          </ion-item>
-     
-      </ion-col>
-      <ion-col>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-  
+    
+    <ion-toolbar>
+        <ion-grid>
+            <ion-row>
+              <ion-col size="9">
+                  
+                  <ion-item *ngFor="let usuario of usuarios" class="perfil" margin-bottom>
+                    <ion-avatar slot="start" size="large">
+                      <img src="assets/img/img_avatar.png">
+                    </ion-avatar>
+                    <ion-label>
+                      <ion-text class="nameUser">
+                        <h3>{{usuario.nome}}</h3>
+                      </ion-text>
+                      <ion-text>
+                        <h3>
+                          Pato Branco - PR
+                        </h3>
+                      </ion-text>
+                    </ion-label>
+                  </ion-item>
+                </ion-col>
+                <ion-col size="3">
+              </ion-col>
+            </ion-row>
+          </ion-grid>     
+      </ion-toolbar>
+
 
   <ion-toolbar color="dark">
     <ion-searchbar [(ngModel)]="searchKey"></ion-searchbar>
@@ -108,7 +113,7 @@
       <ion-row>
         <ion-col size="4">
           <ion-tab-button (click)="logout()">
-            <ion-icon name="exit"></ion-icon>
+            <ion-icon name="exit" size="large"></ion-icon>
             <ion-label>Sair</ion-label>
           </ion-tab-button>
 
@@ -116,14 +121,14 @@
 
         <ion-col size="4">
           <ion-tab-button routerLink="/myposts">
-            <ion-icon name="bicycle"></ion-icon>
+            <ion-icon name="bicycle" size="large"></ion-icon>
             <ion-label>Meus Eventos</ion-label>
           </ion-tab-button>
         </ion-col>
 
         <ion-col size="4">
           <ion-tab-button routerLink="/perfil">
-            <ion-icon name="person"></ion-icon>
+            <ion-icon name="person" size="large"></ion-icon>
             <ion-label>Meu Perfil</ion-label>
           </ion-tab-button>
         </ion-col>
