--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <ion-title>
       HOME
-      </ion-title>
+    </ion-title>
     <ion-buttons slot="end">
       <ion-button size="small" shape="round" color="medium" (click)="notifications()">
         <ion-icon name="notifications"></ion-icon>
@@ -10,33 +10,29 @@
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
+
+  <ion-toolbar *ngFor="let usuario of usuarios">
+
     
-    <ion-toolbar>
-        <ion-grid>
-            <ion-row>
-              <ion-col size="9">
-                  
-                  <ion-item *ngFor="let usuario of usuarios" class="perfil" margin-bottom>
-                    <ion-avatar slot="start" size="large">
-                      <img src="assets/img/img_avatar.png">
-                    </ion-avatar>
-                    <ion-label>
-                      <ion-text class="nameUser">
-                        <h3>{{usuario.nome}}</h3>
-                      </ion-text>
-                      <ion-text>
-                        <h3>
-                          Pato Branco - PR
-                        </h3>
-                      </ion-text>
-                    </ion-label>
-                  </ion-item>
-                </ion-col>
-                <ion-col size="3">
-              </ion-col>
-            </ion-row>
-          </ion-grid>     
-      </ion-toolbar>
+      <ion-thumbnail>
+        <img src="assets/img/img_avatar.png">
+      </ion-thumbnail>
+   
+    <ion-item>
+      <ion-text>
+        <h5>{{usuario.nome}}</h5>
+      </ion-text>
+    </ion-item>
+    
+    <ion-item>
+      <ion-text>
+        <h5>
+          Pato Branco - PR
+        </h5>
+      </ion-text>
+    </ion-item>
+
+  </ion-toolbar>
 
 
   <ion-toolbar color="dark">
@@ -48,7 +44,7 @@
     </ion-buttons>
   </ion-toolbar>
 
-  
+
 </ion-header>
 
 <ion-content>
