--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,8 +1,6 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>
-      HOME
-    </ion-title>
+
+  <ion-header >
+    <ion-toolbar >
     <ion-buttons slot="end">
       <ion-button size="small" shape="round" color="medium" (click)="notifications()">
         <ion-icon name="notifications"></ion-icon>
@@ -11,29 +9,17 @@
     </ion-buttons>
   </ion-toolbar>
 
-  <ion-toolbar *ngFor="let usuario of usuarios">
-
-    
-      <ion-thumbnail>
-        <img src="assets/img/img_avatar.png">
-      </ion-thumbnail>
-   
-    <ion-item>
-      <ion-text>
-        <h5>{{usuario.nome}}</h5>
-      </ion-text>
-    </ion-item>
-    
-    <ion-item>
-      <ion-text>
-        <h5>
-          Pato Branco - PR
-        </h5>
-      </ion-text>
-    </ion-item>
-
+  <ion-toolbar class="cabecalho" *ngFor="let usuario of usuarios">
+    <ion-thumbnail>
+      <img src="assets/img/img_avatar.png">
+    </ion-thumbnail>
+    <ion-text class="nome">
+      <h6>{{usuario.nome}}</h6>
+    </ion-text>
+    <ion-text class="nome">
+      <p>Pato Branco - PR</p>
+    </ion-text>
   </ion-toolbar>
-
 
   <ion-toolbar color="dark">
     <ion-searchbar [(ngModel)]="searchKey"></ion-searchbar>
@@ -43,7 +29,6 @@
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
-
 
 </ion-header>
 
@@ -102,9 +87,9 @@
 
 
 </ion-content>
-
-<ion-footer>
-  <ion-toolbar>
+<!--
+<ion-footer> 
+  <ion-toolbar  class="footer">
     <ion-grid>
       <ion-row>
         <ion-col size="4">
@@ -132,4 +117,4 @@
       </ion-row>
     </ion-grid>
   </ion-toolbar>
-</ion-footer>
+</ion-footer>-->
