--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,13 +1,12 @@
-
-  <ion-header type="ios">
-   <!--<ion-toolbar >
+<ion-header type="ios">
+  <!--<ion-toolbar >
     <ion-buttons slot="end">
       <ion-button size="small" shape="round" color="medium" (click)="notifications()">
         <ion-icon name="notifications"></ion-icon>
         <ion-badge color="dark" slot="end">2</ion-badge>
       </ion-button>
     </ion-buttons>
-  </ion-toolbar>--> 
+  </ion-toolbar>-->
 
   <ion-toolbar class="cabecalho" *ngFor="let usuario of usuarios">
     <ion-thumbnail>
@@ -17,7 +16,6 @@
       <p>{{usuario.nome}}</p>
       <p class="cidade">Pato Branco - PR</p>
     </ion-text>
-
   </ion-toolbar>
 
   <!-- <ion-toolbar>
@@ -53,28 +51,28 @@
 
   <ion-list>
     <ion-item-sliding *ngFor="let product of products">
-      <ion-item>
+      <ion-item  button [routerLink]="['/details', product.id]">
         <ion-avatar slot="start">
-            <ion-thumbnail class="post">
-              <img src="../../../assets/img/mountain-bike.svg">
-            </ion-thumbnail>
+          <ion-thumbnail class="post">
+            <img src="../../../assets/img/mountain-bike.svg">
+          </ion-thumbnail>
         </ion-avatar>
-
-        <ion-label>
-          {{ product.name }}
-          <p>{{ product.description }}</p>
-          <p>{{ product.dtEvent | date: 'dd/MM/yy h:mm'  }}</p>
-        </ion-label>
-
-        <ion-note color="primary" slot="end">Nível: {{ product.nivel }}</ion-note>
+        <ion-grid>
+          <ion-row>
+            <ion-col size="6">
+              <ion-label>
+                {{ product.name }}
+                <p>{{ product.description }}</p>
+                <p>{{ product.dtEvent | date: 'dd/MM/yy h:mm'  }}</p>
+              </ion-label>
+            </ion-col>
+            <ion-col size="6">
+              <ion-label color="primary">Nível: {{ product.nivel }}</ion-label>
+              <ion-label>Distância: </ion-label>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
       </ion-item>
-
-      <ion-item-options side="end">
-        <ion-item-option color="danger" (click)="deleteProduct(product.id)">
-          <ion-icon slot="top" name="trash"></ion-icon>
-          Excluir
-        </ion-item-option>
-      </ion-item-options>
     </ion-item-sliding>
   </ion-list>
 
@@ -89,13 +87,13 @@
 
 </ion-content>
 
-<ion-footer> 
-  <ion-toolbar  class="rodape">
+<ion-footer>
+  <ion-toolbar class="rodape">
     <ion-grid>
       <ion-row>
         <ion-col size="4">
           <ion-tab-button (click)="logout()">
-            <ion-icon name="exit" size="large"></ion-icon>
+            <ion-icon name="log-out"></ion-icon>
             <ion-label>Sair</ion-label>
           </ion-tab-button>
 
