--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,10 +1,10 @@
 :root {
-  --ion-color-primary: #7044ff;
-  --ion-color-primary-rgb: 112,68,255;
-  --ion-color-primary-contrast: #ffffff;
-  --ion-color-primary-contrast-rgb: 255,255,255;
-  --ion-color-primary-shade: #633ce0;
-  --ion-color-primary-tint: #7e57ff;
+  --ion-color-primary: #F18A3D;
+  --ion-color-primary-rgb: 241,138,61;
+  --ion-color-primary-contrast: #000000;
+  --ion-color-primary-contrast-rgb: 0,0,0;
+  --ion-color-primary-shade: #d47936;
+  --ion-color-primary-tint: #f29650;
 
   --ion-color-secondary: #0cd1e8;
   --ion-color-secondary-rgb: 12,209,232;
