--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -48,11 +48,11 @@ ion-text .cidade{
     --size:30px;
 }
 
-ion-footer{
-    color: beige;
-
+.labelRodape{
+    color: white;
 }
 
 ion-icon{
     color: white;
+    
 }
