--- a/src/app/pages/details/details.page.html
+++ b/src/app/pages/details/details.page.html
@@ -24,7 +24,7 @@
       </ion-item>
 
     <ion-item>
-        <ion-label>Nível</ion-label>
+        <ion-label>Ritmo</ion-label>
         <ion-select [(ngModel)]="product.nivel" okText="OK" cancelText="Cancelar">
           <ion-select-option  value="Iniciante">Iniciante</ion-select-option>
           <ion-select-option  value="Amador">Amador</ion-select-option>
@@ -46,9 +46,16 @@
       </ion-item>
 
     <ion-item>
-        <ion-input type="text" [(ngModel)]="product.picture" placeholder="Foto"></ion-input>
+        <ion-label>Distância : {{product.distance}}  KM</ion-label>
       </ion-item>
     
+      <ion-item>
+          <ion-range min="0" max="500" pin color="secondary" [(ngModel)]="product.distance" color="danger">
+            <ion-icon slot="start" size="small" name="arrow-round-down"  color="danger"></ion-icon>
+            <ion-icon slot="end" name="arrow-round-up"  color="danger"></ion-icon>
+          </ion-range>
+        </ion-item>
+
     <ion-item>
         <ion-textarea  rows="6" cols="20" [(ngModel)]="product.description" placeholder="Descrição"></ion-textarea>
     </ion-item>
