--- a/src/app/pages/product-details/product-details.page.html
+++ b/src/app/pages/product-details/product-details.page.html
@@ -5,23 +5,61 @@
     </ion-buttons>
     <ion-title>{{product.name}}</ion-title>
   </ion-toolbar>
- 
+
 </ion-header>
 
 <ion-content class="ion-padding">
-    <ion-card>
-        <ion-item>
-            <ion-avatar slot="start">
-                <img src="assets/img/img_avatar.png">
-            </ion-avatar>
-            <ion-label>
-              <h2>{{product.nameUser}}</h2>
-              <p>{{product.name}}</p>
-            </ion-label>
-          </ion-item>
-       
-      </ion-card>
- 
+
+  <ion-item>
+    <ion-avatar slot="start">
+      <img src="assets/img/img_avatar.png">
+    </ion-avatar>
+    <ion-label>
+      <h2>{{product.nameUser}}</h2>
+      <p>Criado em: {{product.createdAt  | date: 'dd/MM/yy h:mm'  }}</p>
+    </ion-label>
+  </ion-item>
+
+  <ion-item lines="full">
+    <h5>{{product.name}}</h5>
+  </ion-item>
+
+  <ion-item lines="full">
+    <ion-grid>
+      <ion-row align-items-center>
+        <ion-col class="iboriti">
+          <p>Data / Hora</p>
+          <ion-label class="information">{{ product.dtEvent | date: 'dd/MM/yy h:mm'  }}</ion-label>
+        </ion-col>
+        <ion-col class="iboriti">
+          <p>Distância</p>
+          <ion-label class="information">{{product.distance}}Km</ion-label>
+        </ion-col>
+        <ion-col class="iboriti">
+          <p>Ritmo</p>
+          <ion-label class="information">{{ product.nivel }}</ion-label>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-item>
+
+  <ion-item lines="none">
+    <p>Descrição do Evento :</p>
+  </ion-item>
+  <ion-item lines="full">
+      <ion-grid>
+          <ion-row class="description">
+            <ion-col size="12">
+              <div>
+                {{product.description}}
+              </div>
+            </ion-col>
+          </ion-row>
+          </ion-grid>
+    </ion-item>
+
+
+
 </ion-content>
 <!--
 <ion-footer>
