--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -28,52 +28,62 @@
   </ion-toolbar>-->
 
 </ion-header>
-
 <ion-content>
-  <ion-list *ngIf="!products.length">
-    <ion-item *ngFor="let item of [0, 1, 2]">
-      <ion-avatar slot="start">
-        <ion-skeleton-text animated></ion-skeleton-text>
-      </ion-avatar>
-      <ion-label>
-        <h3>
-          <ion-skeleton-text animated style="width: 50%"></ion-skeleton-text>
-        </h3>
-        <p>
-          <ion-skeleton-text animated style="width: 80%"></ion-skeleton-text>
-        </p>
-        <p>
-          <ion-skeleton-text animated style="width: 30%"></ion-skeleton-text>
-        </p>
-      </ion-label>
-    </ion-item>
-  </ion-list>
+  <ion-list lines="full" *ngFor="let product of products">
+    
+      <ion-item class="itensEvent" button [routerLink]="['/product-details', product.id]">
+        <ion-card>
 
-  <ion-list>
-    <ion-item-sliding *ngFor="let product of products">
-      <ion-item  button [routerLink]="['/product-details', product.id]">
-        <ion-avatar slot="start">
-          <ion-thumbnail class="post">
-            <img src="../../../assets/img/mountain-bike.svg">
-          </ion-thumbnail>
-        </ion-avatar>
-        <ion-grid>
-          <ion-row>
-            <ion-col size="6">
-              <ion-label>
-                {{ product.name }}
-                <p>{{ product.description }}</p>
-                <p>{{ product.dtEvent | date: 'dd/MM/yy h:mm'  }}</p>
+          <ion-item lines="full">
+            <ion-label class="city">
+              <ion-icon name="paper" color="primary"></ion-icon>
+              {{product.name}}
+            </ion-label>
+          </ion-item>
+
+          <ion-item  lines="none">
+              <ion-label class="city">
+                <ion-icon name="pin" color="danger"></ion-icon>
+                {{product.cities}}
               </ion-label>
-            </ion-col>
-            <ion-col size="6">
-              <ion-label color="primary">Nível: {{ product.nivel }}</ion-label>
-              <ion-label>Distância: </ion-label>
-            </ion-col>
-          </ion-row>
-        </ion-grid>
+            </ion-item>
+
+       
+            <ion-item lines="none">
+              <ion-grid>
+                <ion-row>
+                  <ion-col>
+                    <ion-label>
+                      <ion-icon name="calendar" color="secondary"></ion-icon>
+                      {{ product.dtEvent | date: 'dd/MM/yy h:mm'  }}
+                    </ion-label>
+                  </ion-col>
+                  <ion-col>
+                    <ion-label>
+                      <ion-icon name="navigate" color="primary"></ion-icon>
+                      {{product.distance}}Km
+                    </ion-label>
+                  </ion-col>
+                  <ion-col>
+                    <ion-label>
+                      <ion-icon name="flame" color="danger"></ion-icon>
+                      {{product.nivel}}
+                    </ion-label>
+                  </ion-col>
+                  <ion-col>
+                    <ion-label>
+                      <ion-icon name="bicycle" color="danger"></ion-icon>
+                      {{product.modalidade}}
+                    </ion-label>
+                  </ion-col>
+                </ion-row>
+              </ion-grid>
+            </ion-item>
+         
+
+        </ion-card>
       </ion-item>
-    </ion-item-sliding>
+
   </ion-list>
 
 
@@ -91,13 +101,14 @@
   <ion-toolbar class="rodape">
     <ion-grid>
       <ion-row>
+       
         <ion-col size="4">
-          <ion-tab-button (click)="logout()">
-            <ion-icon name="log-out"></ion-icon>
-            <ion-label class="labelRodape">Sair</ion-label>
+          <ion-tab-button routerLink="/perfil">
+            <ion-icon name="person" size="large"></ion-icon>
+            <ion-label class="labelRodape">Meu Perfil</ion-label>
           </ion-tab-button>
-
         </ion-col>
+      
 
         <ion-col size="4">
           <ion-tab-button routerLink="/myposts">
@@ -106,10 +117,12 @@
           </ion-tab-button>
         </ion-col>
 
+   
+        
         <ion-col size="4">
-          <ion-tab-button routerLink="/perfil">
-            <ion-icon name="person" size="large"></ion-icon>
-            <ion-label class="labelRodape">Meu Perfil</ion-label>
+          <ion-tab-button (click)="logout()">
+            <ion-icon name="log-out"></ion-icon>
+            <ion-label class="labelRodape">Sair</ion-label>
           </ion-tab-button>
         </ion-col>
 
