Ajustado a tela home

--- a/src/app/pages/details/details.page.html
+++ b/src/app/pages/details/details.page.html
@@ -17,9 +17,9 @@
     <ion-item>
         <ion-label>Modalide</ion-label>
           <ion-select [(ngModel)]="product.modalidade" okText="OK" cancelText="Cancelar">
-          <ion-select-option value="speed">Speed</ion-select-option>
-          <ion-select-option value="mtb">MTB</ion-select-option>
-          <ion-select-option value="misto">MTB + Speed</ion-select-option>
+          <ion-select-option value="SPEED">Speed</ion-select-option>
+          <ion-select-option value="MTB">MTB</ion-select-option>
+          <ion-select-option value="MISTO">MTB + Speed</ion-select-option>
         </ion-select>
       </ion-item>
 
