--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -29,60 +29,73 @@
 
 </ion-header>
 <ion-content>
-  <ion-list lines="full" *ngFor="let product of products">
-    
-      <ion-item class="itensEvent" button [routerLink]="['/product-details', product.id]">
-        <ion-card>
 
-          <ion-item lines="full">
-            <ion-label class="city">
-              <ion-icon name="paper" color="primary"></ion-icon>
-              {{product.name}}
-            </ion-label>
-          </ion-item>
 
-          <ion-item  lines="none">
-              <ion-label class="city">
+  <ion-list *ngFor="let product of products">
+
+    <ion-card button [routerLink]="['/product-details', product.id]">
+      <ion-item lines="full">
+        <ion-grid>
+          <ion-row>
+            <ion-col size="6" align-self: left>
+                <ion-icon name="bicycle" color="dark"></ion-icon>
+              {{product.modalidade}}
+            </ion-col>
+            <ion-col size="2" align-self: center>
+              Data<br>
+              <p>
+                <ion-icon name="calendar" color="secondary"></ion-icon>
+                {{ product.dtEvent | date: 'dd/MM/yy'  }}
+              </p>
+            </ion-col>
+            <ion-col size="2" align-self: center>
+              Distância<br>
+              <p>
+                <ion-icon name="navigate" color="primary"></ion-icon>
+                {{product.distance}}Km
+              </p>
+            </ion-col>
+            <ion-col size="2" align-self: center>
+              Ritmo<br>
+              <p>
+                <ion-icon name="flame" color="danger"></ion-icon>
+                {{product.nivel}}
+              </p>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-item>
+      <ion-item lines="full">
+        <ion-grid>
+          <ion-row>
+            <ion-col size="12">
+              <h4>{{product.name}}</h4>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-item>
+      <ion-item lines="none">
+        <ion-grid>
+          <ion-row>
+            <ion-col size="6">
+              <p>
                 <ion-icon name="pin" color="danger"></ion-icon>
                 {{product.cities}}
-              </ion-label>
-            </ion-item>
-
-       
-            <ion-item lines="none">
-              <ion-grid>
-                <ion-row>
-                  <ion-col>
-                    <ion-label>
-                      <ion-icon name="calendar" color="secondary"></ion-icon>
-                      {{ product.dtEvent | date: 'dd/MM/yy h:mm'  }}
-                    </ion-label>
-                  </ion-col>
-                  <ion-col>
-                    <ion-label>
-                      <ion-icon name="navigate" color="primary"></ion-icon>
-                      {{product.distance}}Km
-                    </ion-label>
-                  </ion-col>
-                  <ion-col>
-                    <ion-label>
-                      <ion-icon name="flame" color="danger"></ion-icon>
-                      {{product.nivel}}
-                    </ion-label>
-                  </ion-col>
-                  <ion-col>
-                    <ion-label>
-                      <ion-icon name="bicycle" color="danger"></ion-icon>
-                      {{product.modalidade}}
-                    </ion-label>
-                  </ion-col>
-                </ion-row>
-              </ion-grid>
-            </ion-item>
-         
-
-        </ion-card>
+              </p>
+            </ion-col>
+            <ion-col size="6"  >
+               
+                  <ion-label class="icone">
+                      <ion-icon name="arrow-round-forward" color="primary"></ion-icon>
+                  </ion-label>
+                  
+            </ion-col>
+          </ion-row>
+        </ion-grid>
       </ion-item>
+    </ion-card>
+
+
 
   </ion-list>
 
@@ -101,14 +114,14 @@
   <ion-toolbar class="rodape">
     <ion-grid>
       <ion-row>
-       
+
         <ion-col size="4">
           <ion-tab-button routerLink="/perfil">
             <ion-icon name="person" size="large"></ion-icon>
             <ion-label class="labelRodape">Meu Perfil</ion-label>
           </ion-tab-button>
         </ion-col>
-      
+
 
         <ion-col size="4">
           <ion-tab-button routerLink="/myposts">
@@ -117,8 +130,8 @@
           </ion-tab-button>
         </ion-col>
 
-   
-        
+
+
         <ion-col size="4">
           <ion-tab-button (click)="logout()">
             <ion-icon name="log-out"></ion-icon>
