--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -17,6 +17,14 @@
     margin: auto;
 }
 
+
+ion-avatar{
+    background-color: black;
+    align-items: center;
+    text-align: center;
+}
+
+
 ion-thumbnail {
     
     --border-radius: 60px;
@@ -51,18 +59,10 @@ ion-text .cidade{
 
 ion-icon{
     color: white;
-    
+       
 }
 
-ion-avatar{
-    background-color: black;
-    align-items: center;
-    text-align: center;
-}
 
-ion-row{
-    font-size: 0.5em;
-}
 
 .city{
     font-size: 0.7em;
@@ -72,10 +72,27 @@ ion-row{
     padding-bottom: 0px;
 }
 
-.itensEvent{
-    --padding-start:-20px;
-    --padding-top: -20px;
-    
-
+ion-row{
+    text-align: justify;
 }
 
+ion-col .p{
+    font-size: 0.5em;
+    font-family: OpenSans-Regular;
+}
+
+ion-col {
+    font-size: 0.5em;
+    font-family: OpenSans-Semibold;
+    align-self: center;
+}
+
+ion-card{
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+
+.icone{
+    font-size: 32px;
+    text-align: right;
+}
