--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -49,7 +49,7 @@ ion-slides {
     right: 0;
     bottom: 0;
     height: 100%;
-    background-color: #ffc400;
+    background-color: #F28B3D;
    // background-color: var(--ion-color-primary);
 
     .waves {
@@ -74,7 +74,7 @@ ion-slides {
 }
 
 ion-segment{
-
+        background-color: #3821A6;
         position: absolute;
              top: 150px;
 }
