--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,10 +1,10 @@
 :root {
-  --ion-color-primary: #F18A3D;
-  --ion-color-primary-rgb: 241,138,61;
+  --ion-color-primary: #F28B3D;
+  --ion-color-primary-rgb: 242,139,61;
   --ion-color-primary-contrast: #000000;
   --ion-color-primary-contrast-rgb: 0,0,0;
-  --ion-color-primary-shade: #d47936;
-  --ion-color-primary-tint: #f29650;
+  --ion-color-primary-shade: #d57a36;
+  --ion-color-primary-tint: #f39750;
 
   --ion-color-secondary: #0cd1e8;
   --ion-color-secondary-rgb: 12,209,232;
@@ -48,7 +48,7 @@
   --ion-color-dark-shade: #1e2023;
   --ion-color-dark-tint: #383a3e;
 
-  --ion-color-medium: #989aa2;
+  --ion-color-medium: #0894A6;
   --ion-color-medium-rgb: 152,154,162;
   --ion-color-medium-contrast: #ffffff;
   --ion-color-medium-contrast-rgb: 255,255,255;
