--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -34,29 +34,31 @@
   <ion-list *ngFor="let product of products">
 
     <ion-card button [routerLink]="['/product-details', product.id]">
-      <ion-item lines="full">
+      <ion-item color="medium" lines="full">
+
         <ion-grid>
           <ion-row>
-            <ion-col size="6" align-self: left>
-                <ion-icon name="bicycle" color="dark"></ion-icon>
-              {{product.modalidade}}
-            </ion-col>
-            <ion-col size="2" align-self: center>
-              Data<br>
+            <ion-col size="3">
+                <ion-chip color="warning">
+                    <ion-label>{{product.modalidade}}</ion-label>
+                  </ion-chip>
+              </ion-col>
+            <ion-col size="3">
+              Data
               <p>
                 <ion-icon name="calendar" color="secondary"></ion-icon>
                 {{ product.dtEvent | date: 'dd/MM/yy'  }}
               </p>
             </ion-col>
-            <ion-col size="2" align-self: center>
-              Distância<br>
+            <ion-col size="3">
+              Distância
               <p>
                 <ion-icon name="navigate" color="primary"></ion-icon>
                 {{product.distance}}Km
               </p>
             </ion-col>
-            <ion-col size="2" align-self: center>
-              Ritmo<br>
+            <ion-col size="3">
+              Ritmo
               <p>
                 <ion-icon name="flame" color="danger"></ion-icon>
                 {{product.nivel}}
@@ -65,38 +67,25 @@
           </ion-row>
         </ion-grid>
       </ion-item>
-      <ion-item lines="full">
+      <ion-item color="medium" lines="full">
         <ion-grid>
           <ion-row>
-            <ion-col size="12">
-              <h4>{{product.name}}</h4>
-            </ion-col>
-          </ion-row>
-        </ion-grid>
-      </ion-item>
-      <ion-item lines="none">
-        <ion-grid>
-          <ion-row>
-            <ion-col size="6">
+            <ion-col class="produto" size="10">
+              <h6>{{product.name}}</h6>
               <p>
                 <ion-icon name="pin" color="danger"></ion-icon>
                 {{product.cities}}
               </p>
             </ion-col>
-            <ion-col size="6"  >
-               
-                  <ion-label class="icone">
-                      <ion-icon name="arrow-round-forward" color="primary"></ion-icon>
-                  </ion-label>
-                  
+            <ion-col size="2">
+              <ion-label class="icone">
+                <ion-icon name="arrow-round-forward" color="light"></ion-icon>
+              </ion-label>
             </ion-col>
           </ion-row>
         </ion-grid>
       </ion-item>
     </ion-card>
-
-
-
   </ion-list>
 
 
