--- a/src/app/pages/details/details.page.html
+++ b/src/app/pages/details/details.page.html
@@ -32,13 +32,20 @@
           <ion-select-option  value="Galático">Galático</ion-select-option>
         </ion-select>
     </ion-item>
-
+<!--
     <ion-item>
       <ion-label>Cidade</ion-label>
       <ion-select  [(ngModel)]="product.cities"   okText="OK" cancelText="Cancelar">
         <ion-select-option *ngFor="let citie of cities">{{citie.cidade}}</ion-select-option>
       </ion-select>
-  </ion-item>
+  </ion-item>-->
+
+  <ion-item>
+    <ion-label>Cidade</ion-label>
+    <ion-select  [(ngModel)]="product.cities"   okText="OK" cancelText="Cancelar">
+      <ion-select-option *ngFor="let cidade of cidades">{{cidade.name}}</ion-select-option>
+    </ion-select>
+</ion-item>
 
     <ion-item>
         <ion-label>Data/Hora</ion-label>
