--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,5 +1,5 @@
-<ion-header type="ios">
-  <!--<ion-toolbar >
+<ion-header translucent>
+ <!-- <ion-toolbar >
     <ion-buttons slot="end">
       <ion-button size="small" shape="round" color="medium" (click)="notifications()">
         <ion-icon name="notifications"></ion-icon>
@@ -8,9 +8,10 @@
     </ion-buttons>
   </ion-toolbar>-->
 
-  <ion-toolbar class="cabecalho" *ngFor="let usuario of usuarios">
+  <ion-toolbar translucent  class="cabecalho" *ngFor="let usuario of usuarios">
     <ion-thumbnail>
       <img src="assets/img/img_avatar.png">
+      
     </ion-thumbnail>
     <ion-text class="nome">
       <p>{{usuario.nome}}</p>
@@ -18,14 +19,14 @@
     </ion-text>
   </ion-toolbar>
 
-  <!-- <ion-toolbar>
+  <ion-toolbar>
     <ion-searchbar [(ngModel)]="searchKey"></ion-searchbar>
     <ion-buttons slot="end">
      <ion-button size="small" shape="round" color="medium" (click)="searchFilter()">
        <ion-icon name="options"></ion-icon>
       </ion-button>
     </ion-buttons> 
-  </ion-toolbar>-->
+  </ion-toolbar>
 
 </ion-header>
 <ion-content>
@@ -39,7 +40,7 @@
         <ion-grid>
           <ion-row class="modalidade">
             <ion-col  size="3">
-                <ion-chip color="warning">
+                <ion-chip>
                     <ion-label>{{product.modalidade}}</ion-label>
                   </ion-chip>
               </ion-col>
@@ -67,19 +68,20 @@
           </ion-row>
         </ion-grid>
       </ion-item>
-      <ion-item color="medium" lines="full">
+      <ion-item ion-padding color="medium" lines="full">
         <ion-grid>
           <ion-row>
             <ion-col class="produto" size="10">
-              <h6>{{product.name}}</h6>
+              <h6 >{{product.name}}</h6>
               <p>
                 <ion-icon name="pin" color="danger"></ion-icon>
                 {{product.cities}}
               </p>
             </ion-col >
-            <ion-col class="produto" size="2">
-              <ion-label class="icone">
-                <ion-icon name="arrow-round-forward"  color="light"></ion-icon>
+          
+            <ion-col size="2">
+              <ion-label class="seta" >
+                <ion-icon name="arrow-round-forward" size="large"  color="light"></ion-icon>
               </ion-label>
             </ion-col>
           </ion-row>
@@ -123,7 +125,7 @@
 
         <ion-col size="4">
           <ion-tab-button (click)="logout()">
-            <ion-icon name="log-out"></ion-icon>
+            <ion-icon name="log-out"  size="large"></ion-icon>
             <ion-label class="labelRodape">Sair</ion-label>
           </ion-tab-button>
         </ion-col>
