ajustes na home

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -36,8 +36,8 @@
       <ion-item  lines="full">
 
         <ion-grid>
-          <ion-row class="modalidade">
-            <ion-col  size="3">
+          <ion-row >
+            <ion-col class="modalidade"  size="3">
                 <ion-chip>
                     <ion-label>{{product.modalidade}}</ion-label>
                   </ion-chip>
@@ -51,14 +51,13 @@
               </p>
             </ion-col>
             <ion-col size="3">
-            
               Distância
               <p>
                 <ion-icon name="navigate" color="primary"></ion-icon>
                 {{product.distance}}Km
               </p>
             </ion-col>
-            <ion-col size="3">
+            <ion-col  size="3">
            
               Ritmo
               <p>
