--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -73,20 +73,28 @@ ion-row{
 }
 
 ion-col {
-    font-size: 0.5em;
+    font-size: 0.6em;
     font-family: OpenSans-Bold;
     padding-left: 2px;
     text-align: right;
     
     p{
         font-family: OpenSans-Regular;
-        font-size: 1em;
+        font-size: 1.1em;
     }
     ion-chip{
         --color: #ffff;
-    }
-    
+    }  
+
+   
 }
+
+.modalidade{
+    text-align: left;
+    align-content: left;
+}
+
+
 
 ion-card{
     margin-top: 3px;
@@ -134,6 +142,7 @@ ion-footer{
   height: 70px;
   ion-icon{
       color: #0894A6;
+      background: transparent;
   }
 }
 
