--- a/src/app/pages/product-details/product-details.page.html
+++ b/src/app/pages/product-details/product-details.page.html
@@ -27,67 +27,49 @@
   </ion-item>
 
   <ion-card>
-    <ion-item>
-
-      <ion-label class="city">
-        <ion-icon name="pin" color="primary"></ion-icon>
-        {{product.cities}}
+    <ion-label>
+      <ion-item lines="full">
+        {{product.name}}
+      </ion-item>
+    </ion-label>
+    <ion-item lines="full">
+      <ion-label>
+        <ion-icon name="calendar" color="primary"></ion-icon>
+        {{ product.dtEvent | date: 'dd/MM/yy'  }} Horário
+        {{ product.dtEvent | date:  'h:mm'  }}
       </ion-label>
-
-
-
+    </ion-item>
+    <ion-item lines="full">
+      <ion-label>
+        <ion-icon name="bicycle"  color="primary"></ion-icon>
+        {{product.modalidade}}
+      </ion-label>
+    </ion-item>
+    <ion-item lines="full">
+      <ion-label>
+        <ion-icon name="flame" color="primary"></ion-icon>
+        {{product.nivel}}
+      </ion-label>
+    </ion-item>
+    <ion-item lines="full">
+      <ion-label>
+        <ion-icon name="flame" color="primary"></ion-icon>
+        {{product.distance}} km
+      </ion-label>
     </ion-item>
 
-    <ion-card-content>
-      <p>{{product.description}}</p>
-
-
-      <ion-item lines="none">
-        <ion-grid>
-          <ion-row>
-            <ion-col>
-
-              <ion-label>
-                <ion-icon name="calendar" color="secondary"></ion-icon>
-                {{ product.dtEvent | date: 'dd/MM/yy h:mm'  }}
-              </ion-label>
-
-            </ion-col>
-            <ion-col>
-
-              <ion-label>
-                <ion-icon name="navigate" color="dark"></ion-icon>
-                {{product.distance}}Km
-              </ion-label>
-
-            </ion-col>
-            <ion-col>
-
-              <ion-label>
-                <ion-icon name="flame" color="danger"></ion-icon>
-                {{product.nivel}}
-              </ion-label>
-
-            </ion-col>
-
-            <ion-col>
-                <ion-label>
-                  <ion-icon name="bicycle" color="tertiary"></ion-icon>
-                  {{product.modalidade}}
-                </ion-label>
-              </ion-col>
-
-          </ion-row>
-        </ion-grid>
+    <ion-item lines="none">
+        <ion-label>Descrição:</ion-label>
+          <p>{{product.description}} </p>
+        
       </ion-item>
-    </ion-card-content>
   </ion-card>
-  <ion-item >
-    
-    <ion-chip  class="confirm" outline color="primary">
-      <ion-button fill="clear" >
-      <ion-label>Confirme sua presença</ion-label>
-    </ion-button>
+
+  <ion-item>
+    <ion-chip class="confirm" outline color="primary">
+      <ion-button fill="clear">
+        <ion-label>Confirme sua presença</ion-label>
+      </ion-button>
     </ion-chip>
 
   </ion-item>
