--- a/src/app/pages/product-details/product-details.page.scss
+++ b/src/app/pages/product-details/product-details.page.scss
@@ -16,6 +16,15 @@
         ion-chip{
             margin: auto auto;
         }
+        
+    }
+
+    ion-list{
+        align-items: center;
+        ion-list-header{
+            margin: auto;
+           
+        }
     }
 
   
